# Dense_NN

./: LICENSE  README.md
R scripts/: CIFAR_10.R  Display_Iterative_Training_Progress.R  Display_Neural_Connections.R  Display_Training_Progress.R  Display_Training_Progress_Pi5.R  Iterative training Dense_NN.R  Resources  Resources.md  Script Dense example.R  diamonds.R  scale_features.R
include/: README.md  dataset_utils.h  loss_functions.h  metrics_utils.h  minibatch_parallel.h  optimizer.h  weights_io.h
installation files/: CMakeLists.txt
scr/: README.md  activation_functions.cpp  config.cpp  config.h  config_utils.cpp  config_utils.h  dataset_utils.cpp  learning_rate_utils.cpp  logging_utils.cpp  loss_functions.cpp  loss_functions.h  metrics_utils.h  optimizer.cpp  prepare_data.cpp  train_nn.cpp  weights_ini.cpp
src/: README.md  activation_functions.h  diagnostics_utils.h  learning_rate_utils.h  logging_utils.cpp  logging_utils.h  metrics_utils.cpp  minibatch_parallel.cpp  prepare_data.h  train_nn.cpp  weights_ini.h
